# zed-frame

./: Cargo.toml  README.md
crates/gpui/: Cargo.toml
crates/gpui/src/: main.rs
crates/zed/src/: main.rs
